# trading_system

./: CMakeLists.txt  README.markdown  README.md  aligned_circular_buffer.hpp  arbitrage_trader.cpp  arbitrage_trader.hpp  barrier.hpp  book.hpp  book_builder.cpp  book_builder.hpp  buffer_types.hpp  fake_gateway.cpp  fake_gateway.hpp  ipc_messages.cpp  ipc_messages.hpp  main.cpp  order_manager.cpp  order_manager.hpp  quote.hpp  strategy.cpp  strategy.hpp  test_bb_with_data.cpp  trading_system_component.hpp  trading_system_viewer.cpp  trading_system_viewer.hpp
data/: simulation_data.csv
example/: README.md  fake_gateway.hpp  main.cpp
test/: aligned_circular_buffer_test.cpp  main.cpp  test_arbitrage_trader.cpp  test_bb_with_data.cpp  test_book.cpp  test_book_builder.cpp  test_order_manager.cpp  test_strategy.cpp  test_viewer.cpp
